Fixed WebSocket bug